match support for string slices

--- a/test/src/e2e_vm_tests/test_programs/should_pass/language/match_expressions/json_abi_oracle_new_encoding.json
+++ b/test/src/e2e_vm_tests/test_programs/should_pass/language/match_expressions/json_abi_oracle_new_encoding.json
@@ -17,8 +17,8 @@
   "messagesTypes": [],
   "types": [
     {
-      "components": null,
-      "type": "u64",
+      "components": [],
+      "type": "()",
       "typeId": 0,
       "typeParameters": null
     }
