--- a/test/src/e2e_vm_tests/test_programs/should_pass/language/match_expressions/test.toml
+++ b/test/src/e2e_vm_tests/test_programs/should_pass/language/match_expressions/test.toml
@@ -1,4 +1,4 @@
 category = "run"
-expected_result = { action = "return", value = 42 }
-expected_result_new_encoding = { action = "return_data", value = "000000000000002A" }
+expected_result = { action = "return", value = 0 }
+expected_result_new_encoding = { action = "return_data", value = "" }
 validate_abi = true
